Root index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <br>
         </div>   
            <pre style="font-size: 30px;">   This is my first website; I hope y'all enjoy.</pre> 
-           <pre style="font-size: 30px;">   <a href="Learn More/learn.html">Learn more about Directory-Social.</a></pre>
+           <pre style="font-size: 30px;">   <a href="./Index/learn.html">Learn more about Directory-Social.</a></pre>
         <div class = "box">
             <h1 class="text-box"> 
                 <div class="centered-text">
