--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <!-- makes page respsonsive to the screen width -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">  
         <title>CSSG Education Team</title>
-        <link rel="stylesheet" href="styles.css"/>
+        <link rel="stylesheet" href="./Index/styles.css"/>
     </head>
 
 
