--- a/Index/learn.html
+++ b/Index/learn.html
@@ -1,5 +1,21 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="utf-8" />
+        <!-- makes page respsonsive to the screen width -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+        <title>Learn More</title>
+        <link rel="stylesheet" href="styles.css"/>
+    </head>
 
+
+    <body class="black">
+        <h3>
+            <a href="../index.html">home</a>
+        </h3>
+        <div class="cent-box">
+            <p style="color: rgb(219, 219, 0); font-size: 42px;" >Directory-Social is the name of a dumb organization filled with people who think they are cooler than they are. The members of this organization subscribe to a way of life known as Opium. As defined by the Urban Dictionary, Opium is "edgy, emo, and very playboi carti core." I, myself, am a member of Directory-Social. Am I Opium? Well, I'll leave that up to you to decide. Thank you for visting this directory.</p>
+        </div>
+    </body>
 </html>
 
