--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
 
-    <body>
+    <body class="black">
     <div class="grey">
         <div class="centered-text">
             <h1>WELCOME to Directory-Social</h1>
