--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
 
-    <body class="black">
+<body class="black">
     <div class="grey">
         <div class="centered-text">
             <h1>WELCOME to Directory-Social</h1>
@@ -45,7 +45,7 @@
                     <li>advancement</li>
                   </ul>
                 </h1>
-              </div>
+            </div>
             <h1 class="text-box"> 
                 <div class="centered-text">
                     And much more...
@@ -55,8 +55,9 @@
         <ul>
             <li>List item.</li>
         </ul>
-        <a href="https://www.google.com/"> Go to this site. </a>
     </div>
-    </body>
+    <button id="myButton">Press me</button>
+    <script async src="Index/script.js" />
+</body>
 </html>
 
