--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <a href="#products" class="nav-link"><h1>PRODUCTS</h1></a>
         <a href="#more" class="nav-link"><h1>MORE</h1></a>
     </nav>
+    <!-- <h1 style="text-align: center;">Directory-Social</h1> -->
     <div class="flexing" style="margin-top: 40px;">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSzOOBnfnOFn5Yr4eUcPAS88NjiHXcQBxh_Ug&usqp=CAU" >
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQbm5ngswFVj4_7kPrA4629ijSac1xHqP4X-Q&usqp=CAU" >
@@ -22,9 +23,9 @@
         <div class="box">
             <div class="pad">
                 <div class="small-box">
-                    yo
+                    <h1>Directory-Social</h1>
                 </div>
-                    <pre class="flexing">
+                    <pre style="text-align: center;">
                         sdfgdsf
                         sdfdsfsd
                         sdfsdf
