--- a/index.html
+++ b/index.html
@@ -6,48 +6,66 @@
     <title>Website</title>
     <link rel="stylesheet" href="./help/styles.css"/>
 </head>
-<body style="background-color: grey;">
+<body>
     <nav class="nav">
         <a href="#about" class="nav-link"><h1>ABOUT</h1></a>
-        <a href="#products" class="nav-link"><h1>PRODUCTS</h1></a>
+        <a href="#products" class="nav-link"><h1>THEMES</h1></a>
         <a href="#more" class="nav-link"><h1>MORE</h1></a>
     </nav>
-    <!-- <h1 style="text-align: center;">Directory-Social</h1> -->
+    <br>
+    <br>
+    <div class="head-box" style="font-size: 30px">
+        <h1>Welcome to Directory-Social</h1>
+    </div>
     <div class="flexing" style="margin-top: 40px;">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSzOOBnfnOFn5Yr4eUcPAS88NjiHXcQBxh_Ug&usqp=CAU" >
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQbm5ngswFVj4_7kPrA4629ijSac1xHqP4X-Q&usqp=CAU" >
+        <!-- <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQbm5ngswFVj4_7kPrA4629ijSac1xHqP4X-Q&usqp=CAU" > -->
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ2Ighvdq_W5oEmM17Dfh-tPw8LRXJZyVdD4A&usqp=CAU" >
     </div>
     <section id="about" class="content">
-        <h2 style="text-align: center;">About Section</h2>
+        <h2 style="text-align: center;">ABOUT</h2>
         <div class="box">
             <div class="pad">
-                <div class="small-box">
-                    <h1>Directory-Social</h1>
+                <div class="flexing">
+                    <div class="small-box">
+                        <h1 style="font-size: 25px;">DIRECTORY</h1>
+                    </div>
+                    <div class="spacing"></div>
+                    <div class="small-box">
+                        <h1 style="font-size: 25px;">SOCIAL</h1>
+                    </div>
                 </div>
-                    <pre style="text-align: center;">
-                        sdfgdsf
-                        sdfdsfsd
-                        sdfsdf
-                    </pre>
-                <div class="small-box">
-                    yo
-                </div>
+                <br>
+                <P style="font-size: 25px; text-align: center; font-family: bold; font-family: sans-serif; font-weight: bold;">Directory-Social is the name of a dumb organization filled with people who think they are cooler than they are. The members of this organization subscribe to a way of life known as Opium. As defined by the Urban Dictionary, Opium is "edgy, emo, and very playboi carti core." I, myself, am a member of Directory-Social. Am I Opium? Well, I'll leave that up to you to decide. Thank you for visting this directory.</P>
             </div>
         </div>
     </section>
     <section id="products" class="content">
-        <h2 style="text-align: center;">Products Section</h2>
+        <h2 style="text-align: center;">THEMES</h2>
         <div class="box">
             <div class="pad">
-                <div class="small-box">
-
+                <div class="flexing" style="font-size: 32px;">
+                    <ul>
+                        <li>culture</li>
+                        <li>creativity</li>
+                        <li>civilization</li>
+                        <li>experience</li>
+                        <li>fashion</li>
+                    </ul>
+                    <div class="spacing"></div>
+                    <ul>
+                        <li>ability</li>
+                        <li>develop</li>
+                        <li>education</li>
+                        <li>progress</li>
+                        <li>advance</li>
+                    </ul>
                 </div>
             </div>
         </div>
     </section>
     <section id="more" class="content">
-        <h2 style="text-align: center;">More Section</h2>
+        <h2 style="text-align: center;">MORE</h2>
         <div class="box">
             <div class="pad">
                 <div class="small-box">
