--- a/index.html
+++ b/index.html
@@ -16,44 +16,17 @@
         email: mvanhanken@gmail.com
         mobile: (918) 703-3547
     </pre>
-    <a href="Directory-Social/">Directory-Social</a>
-    <div class="grey">
-            <h1 class="text-box"> 
-                <div class="centered-text">
-                    Directory-Social Themes
-                </div>
-            </h1>
-            <div class="container">
-                <div class="text-box2">
-                  <ul>
-                    <li>culture</li>
-                    <li>art</li>
-                    <li>civilization</li>
-                    <li>experience</li>
-                    <li>fashion</li>
-                  </ul>
-                </div>
-
-                <div class="text-box2">
-                  <ul>
-                    <li>ability</li>
-                    <li>development</li>
-                    <li>education</li>
-                    <li>progress</li>
-                    <li>advancement</li>
-                  </ul>
+    <div class="box">
+        <div class="pad">
+            <div class="center">
+                <div class="text-box">
+                    <h1>PROJECTS</h1>
                 </div>
             </div>
-            <h1 class="text-box"> 
-                <div class="centered-text">
-                    And much more...
-                </div>
-            </h1>
+            <a href="Directory-Social/" style="font-size: 25px;">Directory-Social</a>
         </div>
-        <ul>
-            <li>List item.</li>
-        </ul>
     </div>
+    
     <!-- <button id="myButton">Press me</button>
     <script async src="Index/script.js" /> -->
 </body>
