--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <nav class="nav">
+        <a href="../index.html" class="nav-link left-image">
+            <img src="https://i.pinimg.com/originals/0c/02/ce/0c02ce4850d6b88d44f87271ff5f4a71.png" alt="HOME">
+        </a>
         <a href="#about" class="nav-link"><h1>ABOUT</h1></a>
         <a href="#products" class="nav-link"><h1>THEMES</h1></a>
         <a href="#more" class="nav-link"><h1>MORE</h1></a>
@@ -19,7 +22,7 @@
     </div>
     <div class="flexing" style="margin-top: 40px;">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSzOOBnfnOFn5Yr4eUcPAS88NjiHXcQBxh_Ug&usqp=CAU" >
-        <!-- <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQbm5ngswFVj4_7kPrA4629ijSac1xHqP4X-Q&usqp=CAU" > -->
+        <!-- <img src="https://lastfm.freetls.fastly.net/i/u/avatar170s/e67a816f78386a342acc52ab9cc0f82e" > -->
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ2Ighvdq_W5oEmM17Dfh-tPw8LRXJZyVdD4A&usqp=CAU" >
     </div>
     <section id="about" class="content">
