--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
                 <div class="text-box">
                     <h1>PROJECTS</h1>
                 </div>
+                <a href="Directory-Social/" style="font-size: 25px;">Directory-Social</a>
+                <div class="text-box">
+                    <h1>SKILLS</h1>
+                </div>
             </div>
-            <a href="Directory-Social/" style="font-size: 25px;">Directory-Social</a>
         </div>
     </div>
     
