--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
                 <div class="text-box">
                     <h1>PROJECTS</h1>
                 </div>
+            </div>
+            <br>
+            <div class="center">
                 <a href="Directory-Social/" style="font-size: 25px;">Directory-Social</a>
+            </div>
+            <br>
+            <div class="center">
                 <div class="text-box">
                     <h1>SKILLS</h1>
                 </div>
