--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <br>
             <div class="center">
-                <a href="Directory/index.html" style="font-size: 25px;">Directory-Social</a>
+                <a href="Yes/index.html" style="font-size: 25px;">Directory-Social</a>
             </div>
             <br>
             <div class="center">
@@ -35,9 +35,9 @@
             </div>
         </div>
     </div>
-    
-    <!-- <button id="myButton">Press me</button>
-    <script async src="Index/script.js" /> -->
+
+
+<script src="Portfolio/styling.js"></script>
 </body>
 </html>
 
