--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <br>
             <div class="center">
                 <div class="text-box">
-                    <h1>SKILLS</h1>
+                    <h1>ABOUT ME</h1>
                 </div>
             </div>
         </div>
