--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="pad">
             <div class="center">
                 <div class="text-box">
-                    <h1>PROJECTS</h1>
+                    <h1>PROJECTS.</h1>
                 </div>
             </div>
             <br>
@@ -30,7 +30,7 @@
             <br>
             <div class="center">
                 <div class="text-box">
-                    <h1>ABOUT ME</h1>
+                    <h1>ABOUT ME.</h1>
                 </div>
             </div>
         </div>
