--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <br>
             <div class="center">
-                <a href="Directory/out/index.html" style="font-size: 25px;">Directory-Social</a>
+                <a href="/Directory/" style="font-size: 25px;">Directory-Social</a>
             </div>
             <br>
             <div class="center">
