--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
         <div class="pad">
             <div class="center">
                 <div class="text-box">
-                    <h1>PROJECTS.</h1>
+                    <h1>PROJECTS</h1>
                 </div>
             </div>
             <br>
             <div class="center">
-                <a href="/Directory/" style="font-size: 25px;">Directory-Social</a>
+                <a href="/Directory/app/page.js" style="font-size: 25px;">Directory-Social</a>
             </div>
             <br>
             <div class="center">
                 <div class="text-box">
-                    <h1>ABOUT ME.</h1>
+                    <h1>ABOUT ME</h1>
                 </div>
             </div>
         </div>
